Make intro and menu flow together

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/SphereScene.SphereScene
-EditorStartupMap=/Game/Maps/SphereScene.SphereScene
+GameDefaultMap=/Game/Levels/Intro.Intro
+EditorStartupMap=/Game/Levels/Intro.Intro
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
