--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=73DC3C0B4F116908C75CAABC307B1D42
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "4A6A932D43B3DFF5F63093B55A34CAD4", "Grass Ball")
+
